--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "parcel index.html"
   },
   "dependencies": {
+    "antd": "^4.5.4",
+    "axios": "^0.20.0",
     "react": ">=15",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1"
